Fix Docker and created new Clients Module to hold all clients instance globally

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -13,4 +13,4 @@ COPY . .
 COPY --from=deps /app/node_modules ./node_modules
 
 EXPOSE 3000
-CMD ["pnpm", "start:dev", "user-management"]
+CMD ["pnpm", "start:debug"]
