--- a/nginx.conf
+++ b/nginx.conf
@@ -3,24 +3,8 @@ http {
   # The upstream conatiner specficiation,
   # based on docs, to be reacheded is:
   # container_name:port
-  upstream user-management {
-    server ms-user-management:3000;
-  }
-
-  upstream wf {
-    server ms-orchestrator:3000;
-  }
-
-  upstream crm {
-    server ms-crm-int:3000;
-  }
-  
-  upstream feedback {
-    server ms-feedback:3000;
-  }
-  
-  upstream payment {
-    server ms-payment:3000;
+  upstream backend {
+    server st-backend:3000;
   }
 
   server {
@@ -33,29 +17,8 @@ http {
     proxy_read_timeout 30s;
     proxy_send_timeout 30s;
 
-    location /user-management/ {
-      proxy_pass http://user-management/;
-      rewrite ^/user-management(/.*)$ $1 break; # Remove '/user-management' prefix
-    }
-
-    location /wf/ {
-      proxy_pass http://wf/;
-      rewrite ^/wf(/.*)$ $1 break; # Remove '/wf' prefix
-    }
-
-    location /crm/ {
-      proxy_pass http://crm/;
-      rewrite ^/crm(/.*)$ $1 break; # Remove '/crm' prefix
-    }
-    
-    location /feedback/ {
-      proxy_pass http://feedback/;
-      rewrite ^/feedback(/.*)$ $1 break; # Remove '/feedback' prefix
-    }
-    
-    location /payment/ {
-      proxy_pass http://payment/;
-      rewrite ^/payment(/.*)$ $1 break; # Remove '/payment' prefix
+    location / {
+      proxy_pass http://backend/;
     }
   }
 }
