--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,12 +18,30 @@
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
     "paths": {
-      "@services/common": ["apps/services/src/common"],
-      "@services/common/*": ["apps/services/src/common/*"],
-      "@services/contracts": ["apps/services/src/contracts"],
-      "@services/contracts/*": ["apps/services/src/contracts/*"],
-      "@services/clients": ["apps/services/src/clients"],
-      "@services/clients/*": ["apps/services/src/clients/*"]
+      "@services/common": [
+        "apps/services/src/common"
+      ],
+      "@services/common/*": [
+        "apps/services/src/common/*"
+      ],
+      "@services/contracts": [
+        "apps/services/src/contracts"
+      ],
+      "@services/contracts/*": [
+        "apps/services/src/contracts/*"
+      ],
+      "@services/clients": [
+        "apps/services/src/clients"
+      ],
+      "@services/clients/*": [
+        "apps/services/src/clients/*"
+      ],
+      "@protos": [
+        "libs/protos/src"
+      ],
+      "@protos/*": [
+        "libs/protos/src/*"
+      ]
     }
   }
 }
