--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,26 @@
 name: saas-template
 
 services:
+  st-api:
+    container_name: st-api
+    depends_on:
+      - st-services
+      - st-main
+    build:
+      context: .
+      dockerfile: ./apps/api/Dockerfile.dev
+    command: pnpm start:debug api
+    env_file:
+      - ./apps/api/.env
+    volumes:
+      - ./apps/api:/app/apps/api
+      - ./libs:/app/libs
+      - ./protos:/app/protos
+    ports:
+      - 9231:9229
+    networks:
+      - st-network
+
   st-services:
     container_name: st-services
     depends_on:
@@ -19,8 +39,10 @@ services:
     volumes:
       - ./apps/services:/app/apps/services
       - ./libs:/app/libs
+      - ./protos:/app/protos
     ports:
       - 9230:9229
+      - 5000:5000
     networks:
       - st-network
   
@@ -42,6 +64,7 @@ services:
     volumes:
       - ./apps/main:/app/apps/main
       - ./libs:/app/libs
+      - ./protos:/app/protos
     ports:
       - 9229:9229
     networks:
