--- a/nginx.conf
+++ b/nginx.conf
@@ -3,12 +3,8 @@ http {
   # The upstream conatiner specficiation,
   # based on docs, to be reacheded is:
   # container_name:port
-  upstream services {
-    server st-services:3000;
-  }
-  
-  upstream main {
-    server st-main:3000;
+  upstream api-gateway {
+    server st-api:3000;
   }
 
   server {
@@ -22,7 +18,7 @@ http {
     proxy_send_timeout 30s;
 
     location / {
-      proxy_pass http://services/;
+      proxy_pass http://api-gateway/;
     }
   }
 }
