--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "test:e2e": "jest --config ./apps/main/test/jest-e2e.json",
     "proto:all": "pnpm proto:clean && pnpm proto:build",
     "proto:clean": "rm -rf ./libs/protos/src/",
-    "proto:build": "protoc --plugin=./node_modules/.bin/protoc-gen-ts_proto --ts_proto_out=./libs --ts_proto_opt=nestJs=true --ts_proto_opt=addNestjsRestParameter=true --proto_path=./ protos/src/resources.service.proto"
+    "proto:build": "protoc --plugin=./node_modules/.bin/protoc-gen-ts_proto --ts_proto_out=./libs --ts_proto_opt=nestJs=true --ts_proto_opt=addNestjsRestParameter=true --proto_path=./ protos/src/*.proto"
   },
   "dependencies": {
     "@bufbuild/protobuf": "^2.2.3",
