--- a/apps/main/Dockerfile
+++ b/apps/main/Dockerfile
@@ -1,7 +1,8 @@
 FROM node:lts-alpine AS base
 ENV PNPM_HOME="/pnpm"
 ENV PATH="$PNPM_HOME:$PATH"
-RUN corepack enable
+
+RUN npm i -g corepack@latest
 WORKDIR /app
 
 FROM base AS prod-deps
