--- a/apps/services/Dockerfile.dev
+++ b/apps/services/Dockerfile.dev
@@ -1,8 +1,10 @@
 FROM node:lts-alpine AS base
 ENV PNPM_HOME="/pnpm"
 ENV PATH="$PNPM_HOME:$PATH"
-RUN corepack enable
+
+RUN npm i -g corepack@latest
 WORKDIR /app
+
 
 FROM base AS deps
 COPY package*.json pnpm*.yaml ./
