--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./apps/main/test/jest-e2e.json",
     "proto:all": "pnpm proto:clean && pnpm proto:build",
-    "proto:clean": "rm -rf ./libs/protos/src/saas-proto-services",
+    "proto:clean": "rm -rf ./libs/protos/src/saas-proto-services && ./libs/protos/src/proto-main",
     "proto:build": "protoc --plugin=./node_modules/.bin/protoc-gen-ts_proto --ts_proto_out=./libs/protos/src --ts_proto_opt=nestJs=true --ts_proto_opt=addNestjsRestParameter=true --proto_path=./protos protos/**/*.proto"
   },
   "dependencies": {
