Add CORS configuration to api service and nginx

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,5 @@
 events {}
+
 http {
   # The upstream conatiner specficiation,
   # based on docs, to be reacheded is:
@@ -9,15 +10,31 @@ http {
 
   server {
     error_log /var/log/nginx/localhost.error_log info;
-    
+
     listen 80;
-    
+
     # Add timeouts to handle service startup delays
     proxy_connect_timeout 10s;
     proxy_read_timeout 30s;
     proxy_send_timeout 30s;
 
+    location ~* \.(eot|ttf|woff|woff2)$ {
+      add_header Access-Control-Allow-Origin '*';
+      add_header Access-Control-Allow-Methods '*';
+      add_header Access-Control-Allow-Headers '*';
+      add_header Access-Control-Allow-Credentials 'true';
+
+      default_type 'text/plain charset=UTF-8';
+    }
+
     location / {
+      if ($http_origin = ''){
+        set $http_origin "*";
+      }
+
+      proxy_hide_header Access-Control-Allow-Origin;
+      add_header Access-Control-Allow-Origin $http_origin;
+        
       proxy_pass http://api/;
     }
   }
