--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,47 @@
 name: saas-template
 
+volumes:
+  # region Cloud services
+  pgdata:
+  rabbitmqdata:
+  rabbitmqlog:
+  # endregion
+
+networks:
+  saas-template:
+    driver: bridge
+    attachable: true
+
 services:
+  st-domain:
+    container_name: st-domain
+    depends_on:
+      - st-rabbitmq
+      - st-postgres
+      - st-services
+    build:
+      context: .
+      dockerfile: ./apps/domain/Dockerfile.dev
+    command: pnpm start:debug domain
+    env_file:
+      - ./apps/domain/.env
+    environment:
+      RABBIT_MQ_URL: "amqp://admin:password@st-rabbitmq/"
+      DB_CONNECTION_STRING: "postgresql://postgres:password@st-postgres/database"
+    volumes:
+      - ./apps/domain:/app/apps/domain
+      - ./libs:/app/libs
+      - ./protos:/app/protos
+    ports:
+      - 9229:9229
+    networks:
+      - saas-template
+
   st-api:
     container_name: st-api
     depends_on:
       - st-services
-      - st-main
+      - st-domain
     build:
       context: .
       dockerfile: ./apps/api/Dockerfile.dev
@@ -19,7 +55,7 @@ services:
     ports:
       - 9231:9229
     networks:
-      - st-network
+      - saas-template
 
   st-services:
     container_name: st-services
@@ -43,31 +79,7 @@ services:
     ports:
       - 9230:9229
     networks:
-      - st-network
-  
-  st-main:
-    container_name: st-main
-    depends_on:
-      - st-rabbitmq
-      - st-postgres
-      - st-services
-    build:
-      context: .
-      dockerfile: ./apps/main/Dockerfile.dev
-    command: pnpm start:debug main
-    env_file:
-      - ./apps/main/.env
-    environment:
-      RABBIT_MQ_URL: "amqp://admin:password@st-rabbitmq/"
-      DB_CONNECTION_STRING: "postgresql://postgres:password@st-postgres/database"
-    volumes:
-      - ./apps/main:/app/apps/main
-      - ./libs:/app/libs
-      - ./protos:/app/protos
-    ports:
-      - 9229:9229
-    networks:
-      - st-network
+      - saas-template
   
   # region Cloud services
   st-rabbitmq:
@@ -87,7 +99,7 @@ services:
       - rabbitmqdata:/var/lib/rabbitmq
       - rabbitmqlog:/var/log/rabbitmq
     networks:
-      - st-network
+      - saas-template
 
   st-postgres:
     container_name: st-postgres
@@ -101,7 +113,7 @@ services:
     volumes:
       - pgdata:/var/lib/postgresql/data
     networks:
-      - st-network
+      - saas-template
 
   st-nginx:
     container_name: st-nginx
@@ -113,7 +125,7 @@ services:
     depends_on:
       - st-api
     networks:
-      - st-network
+      - saas-template
   
   st-ngrok:
     container_name: st-ngrok
@@ -133,7 +145,7 @@ services:
     depends_on:
       - st-nginx
     networks:
-      - st-network
+      - saas-template
   
   st-permitio:
     container_name: st-permitio
@@ -144,17 +156,7 @@ services:
     ports:
       - 7766:7000
     networks:
-      - st-network
+      - saas-template
   
   # endregion
 
-volumes:
-  # region Cloud services
-  pgdata:
-  rabbitmqdata:
-  rabbitmqlog:
-  # endregion
-
-networks:
-  st-network:
-    driver: bridge
