--- a/package.json
+++ b/package.json
@@ -11,15 +11,15 @@
     "start": "nest start",
     "start:dev": "nest start --watch",
     "start:debug": "nest start --debug=0.0.0.0:9229 --watch",
-    "start:prod": "node dist/apps/main/main",
+    "start:prod": "node dist/apps/domain/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./apps/main/test/jest-e2e.json",
+    "test:e2e": "jest --config ./apps/domain/test/jest-e2e.json",
     "proto:all": "pnpm proto:clean && pnpm proto:build",
-    "proto:clean": "rm -rf ./libs/protos/src/saas-proto-services && ./libs/protos/src/proto-main",
+    "proto:clean": "rm -rf ./libs/protos/src/saas-proto-services ./libs/protos/src/proto-domain",
     "proto:build": "protoc --plugin=./node_modules/.bin/protoc-gen-ts_proto --ts_proto_out=./libs/protos/src --ts_proto_opt=nestJs=true --ts_proto_opt=addNestjsRestParameter=true --proto_path=./protos protos/**/*.proto"
   },
   "dependencies": {
